removeFirst